--- a/src/components/Link/Link.css
+++ b/src/components/Link/Link.css
@@ -4,11 +4,11 @@
   font-weight: 400;
   font-size: 1.15rem;
   filter: contrast(1.2);
-  background: var(--gradient);
+  background-image: var(--gradient);
   background-size: 0 2px;
   background-repeat: no-repeat;
   background-position: left bottom;
-  transition: color 300ms ease-in-out, background-size 0.3s;
+  transition: 300ms all ease-in-out;
 }
 
 .link:hover {
