--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -25,7 +25,7 @@
   display: flex;
   padding: 0.2rem;
   border-radius: 50%;
-  animation: nav-link-fade 0.5s ease-in-out forwards;
+  animation: nav-link-fade 500ms ease-in-out forwards;
   transition: background-color 200ms ease-in-out;
 }
 .nav-icon-container:hover, .bar-container:hover {
@@ -36,18 +36,15 @@
 .nav-icon {
   height: 2.1rem;
   width: 2.1rem;
-  transition: filter 150ms ease-in-out;
+  transition: 150ms filter ease-in-out;
 }
 
 .nav-icon.clr-scheme {
   fill: var(--nav-clr);
   stroke: var(--nav-clr);
-  transition: 300ms ease-in-out;
 }
 
-.nav-a {
-  display: flex;
-}
+.nav-a { display: flex; }
 
 .nav-logo {
   opacity: 0;
