--- a/src/components/Navbar/components/NavLinks.css
+++ b/src/components/Navbar/components/NavLinks.css
@@ -5,20 +5,16 @@
   flex: 3;
 }
 
-.nav-link {
+.nav-links a {
   opacity: 0;
-  list-style: none;
   animation: nav-link-fade 0.5s ease-in-out 0.5s forwards;
+  color: var(--nav-clr);
 }
-.nav-link:nth-child(2) {
+.nav-links a:nth-child(2) {
   animation-delay: 0.75s;
 }
-.nav-link:nth-child(3) {
+.nav-links a:nth-child(3) {
   animation-delay: 1s;
-}
-
-.nav-link a {
-  color: var(--nav-clr);
 }
 
 @keyframes nav-link-fade {
@@ -35,8 +31,7 @@
   .hamburger {
     display: flex;
   }
-
-  .nav-link {
+  .nav-links a {
     display: none;
   }
 }
